# NR-ROS2

./: CMakeLists.txt  GPT_INSTRUCTIONS.txt  README.md  ROS2-Feasibility-Analysis-Report (1).docx  ROS2_Robot_Feasibility_Analysis.md  ROS2_Robot_System_Prompt.md  ROS2_Robot_System_Prompt_Corrected.md  apriltag_node.cpp  cloud_nodes.launch.py  common_types.h  decision_comm.cpp  edge_nodes.launch.py  feasibility-report.js  host_mcu_main.c  lane_detection_node.cpp  ld06_lidar.c  ld06_lidar.h  microros_bridge_node.cpp  package.xml  pid_controller.c  pid_controller.h  platformio.ini  ros2-prompts-document.md  slave_mcu_main.c  yolo_detection_node.cpp
tests/: pid_controller_test.c
